# decompress

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml
decompress/: Cargo.toml
decompress/examples/: unpack.rs  unzip.rs
decompress/src/: lib.rs
decompress/src/decompressors/: ar.rs  bz2.rs  gz.rs  mod.rs  tar_common.rs  tarball.rs  tarbz.rs  targz.rs  tarxz.rs  tarzst.rs  unrar.rs  utils.rs  xz.rs  zip.rs  zstd.rs
decompress/tests/: archives_test.rs  compare.rs
decompress/tests/expected/bz_2/: sub.txt
decompress/tests/expected/content_bare_ar/: a.out
decompress/tests/expected/folders_tgz_0/: root.txt
decompress/tests/expected/inner_txz_1/: sub.txt
decompress/tests/expected/rar_1/: VERSION
decompress/tests/fixtures/: bare_ar  bare_tar_xz  folders.tar.xz  inner.tar  inner.tar.xz  inner.tar.zst  inner_tar_bz2  sub.txt.bz2  sub.txt.xz  sub.txt.zst  tar-gz.tzz
decompress/tests/snapshots/: archives_test__can_list_bare.ar.snap  archives_test__can_list_inner.tar.bz2.snap  archives_test__can_list_inner.tar.gz.snap  archives_test__can_list_inner.tar.snap  archives_test__can_list_inner.tar.xz.snap  archives_test__can_list_inner.tar.zst.snap  archives_test__can_list_inner.zip.snap  archives_test__can_list_sub.txt.bz2.snap  archives_test__can_list_sub.txt.gz.snap  archives_test__can_list_sub.txt.xz.snap  archives_test__can_list_sub.txt.zst.snap
xtask/: Cargo.toml
xtask/src/: main.rs
